# contact-book-console-oop

./: README.md  app.py  dialog.py  generate_data.py  model.py  phone_book.json  pyproject.toml  requirements.txt
